added support of dark mode and added fonts

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,12 @@
             </button>
           </li>
           <li class="nav-list__item">
-            <button class="button nav-list__button" type="button">Night</button>
+            <button
+              class="button night-mode-button nav-list__button"
+              type="button"
+            >
+              Night
+            </button>
           </li>
         </ul>
       </nav>
