added tech badges

--- a/app/index.html
+++ b/app/index.html
@@ -49,50 +49,57 @@
     </header>
     <main class="main body__main">
       <div class="home main__home wrapper">
-        <p class="home__subtitle lang_rus">Привет! Меня зовут</p>
+        <p class="home__subtitle lang_rus">привет! меня зовут</p>
         <p class="home__subtitle lang_eng">Hi there! My name is</p>
-        <h1 class="home__title lang_rus">Баздырева Елизавета</h1>
-        <h1 class="home__title lang_eng">Bazdyreva Elizaveta</h1>
-        <p class="home__subtitle lang_rus">Я frontend-разработчик</p>
+        <h1 class="home__title lang_rus">
+          Баздырева<br />
+          Елизавета
+        </h1>
+        <h1 class="home__title lang_eng">
+          Bazdyreva<br />
+          Elizaveta
+        </h1>
+        <p class="home__subtitle lang_rus">я frontend-разработчик</p>
         <p class="home__subtitle lang_eng">I'm a frontend developer</p>
         <div class="socials home__socials">
           <a class="socials__link" href="#">Telegram</a>
-          <a class="socials__link" href="#">Whatsapp</a>
+          <a class="socials__link" href="#">WhatsApp</a>
           <a class="socials__link" href="#">Github</a>
         </div>
       </div>
       <div class="skills main__skills wrapper">
         <h2 class="skills__title lang_rus">Навыки</h2>
         <h2 class="skills__title lang_eng">Skills</h2>
-        <ul class="skill-list skills__skill-list">
-          <li class="skill-list__item">HTML5</li>
-          <li class="skill-list__item">CSS3</li>
-          <li class="skill-list__item">Javascript</li>
-          <li class="skill-list__item">Typescript</li>
-          <li class="skill-list__item">Axios</li>
-        </ul>
-        <ul>
-          <li class="skill-list__item">SCSS(SASS)</li>
-          <li class="skill-list__item">BEM</li>
-          <li class="skill-list__item">Tailwind</li>
-          <li class="skill-list__item">Bootstrap</li>
-        </ul>
-        <ul class="skill-list skills__skill-list">
-          <li class="skill-list__item">React</li>
-          <li class="skill-list__item">Redux</li>
-          <li class="skill-list__item">Redux Toolkit</li>
-          <li class="skill-list__item">React Router</li>
-        </ul>
-        <ul class="skill-list skills__skill-list">
-          <li class="skill-list__item">Angular 7+</li>
-          <li class="skill-list__item">NgRx</li>
-          <li class="skill-list__item">RxJS</li>
-          <li class="skill-list__item">Material UI</li>
-        </ul>
-        <ul class="skill-list skills__skill-list">
-          <li class="skill-list__item">Vue3</li>
-          <li class="skill-list__item">Pinia</li>
-        </ul>
+
+        <div class="skills-wrapper">
+          <ul class="skill-list skills__skill-list">
+            <li class="skill-list__item html-badge">HTML5, CSS3</li>
+            <li class="skill-list__item js-badge">JavaScript</li>
+            <li class="skill-list__item ts-badge">TypeScript</li>
+            <li class="skill-list__item axios-badge">Axios</li>
+          </ul>
+          <ul class="skill-list skills__skill-list">
+            <li class="skill-list__item scss-badge">SCSS (SASS)</li>
+            <li class="skill-list__item bem-badge">BEM</li>
+            <li class="skill-list__item tailwind-badge">Tailwind</li>
+            <li class="skill-list__item bootstrap-badge">Bootstrap</li>
+          </ul>
+          <ul class="skill-list skills__skill-list">
+            <li class="skill-list__item react-badge">React</li>
+            <li class="skill-list__item redux-badge">Redux, RTK</li>
+            <li class="skill-list__item router-badge">React Router</li>
+          </ul>
+          <ul class="skill-list skills__skill-list">
+            <li class="skill-list__item angular-badge">Angular 7+</li>
+            <li class="skill-list__item rx-badge">NgRx, RxJS</li>
+            <li class="skill-list__item material-badge">Material UI</li>
+          </ul>
+          <ul class="skill-list skills__skill-list">
+            <li class="skill-list__item vue-badge">Vue3</li>
+            <li class="skill-list__item pinia-badge">Pinia</li>
+          </ul>
+        </div>
+
         <p class="skills__description lang_rus">
           Тут будет описание моих навыков и чем заниамюсь сейчас
         </p>
